--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html{
+  box-sizing: border-box;
+}
+*, ::after, ::before{
+  box-sizing: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 0 10px;
+  font-family: Poppins, sans-serif ;
+  background-color: rgb(248, 248, 248);
+  background-image: url("https://www.grantex.cz/files/obehove-hospodarstvi.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
