--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
-html{
+html {
   box-sizing: border-box;
+  background-size: cover;
+  height: auto;
+  overflow: hidden;
+  background: url("https://www.grantex.cz/files/obehove-hospodarstvi.jpg") no-repeat center center fixed;
 }
-*, ::after, ::before{
+
+
+
+*, ::after, ::before {
   box-sizing: inherit;
 }
 
@@ -9,9 +16,6 @@ body {
   max-width: 700px;
   margin: 0 auto;
   padding: 0 10px;
-  font-family: Poppins, sans-serif ;
-  background-color: rgb(248, 248, 248);
-  background-image: url("https://www.grantex.cz/files/obehove-hospodarstvi.jpg");
-  background-repeat: no-repeat;
-  background-size: 100%;
+  font-family: Poppins, sans-serif;
 }
+
